--- a/conda-envs/universal.yml
+++ b/conda-envs/universal.yml
@@ -10,3 +10,6 @@ dependencies:
     - mido
     - pip:
         - torch
+        - tensorboard
+        # downgrade because of pytorch bug
+        - setuptools==59.5.0
