TorchAudio and Dataset + improved dataset loading + multithreading speeds up loading dataset + big batches of data can be loaded now

--- a/conda-envs/universal.yml
+++ b/conda-envs/universal.yml
@@ -8,8 +8,10 @@ dependencies:
     - matplotlib
     - tqdm
     - mido
+    - ipython
     - pip:
         - torch
+        - torchaudio
         - tensorboard
         # downgrade because of pytorch bug
         - setuptools==59.5.0
