--- a/config/default.yml
+++ b/config/default.yml
@@ -1,12 +1,17 @@
-model:
-  name: LittleLion
-  epochs: 1
-  batch_epochs: 1
-  batch_size_in_seconds: 1
-dataset: 
-  name: train_1
-  normalize: true
-  worker: 2 
 device: cpu
-log: true
-evaluate: None
+log: True
+evaluation:
+input_sequence: 512
+output_sequence: 1
+model:
+  tag: LSTM/4-to-1
+  name: LstmModel
+  train:
+    epochs: 5
+    save_every: 1
+dataset: 
+  name: train_0
+  loader:
+    batch_size: 128
+    shuffle: True
+    num_workers: 2
