--- a/config/default.yml
+++ b/config/default.yml
@@ -6,12 +6,12 @@ log: True
 evaluation:
 
 # model and dataset depends on those parameters
-prev_samples: 512
-future_samples: 512
+prev_samples: 1024
+future_samples: 128
 
 # specify model arguments
 model:
-  tag: LSTM/512-512
+  tag: LSTM/1024-128
   name: LstmModel
 
   # arguments used for training the model
@@ -22,10 +22,10 @@ model:
 # specify dataset arguments
 dataset: 
   name: train_0
-  normalize: False
+  normalize: True
 
   # dataloader specific arguments
   loader:
-    batch_size: 64
+    batch_size: 128
     shuffle: True
-    num_workers: 2
+    num_workers: 4
