--- a/config/default.yml
+++ b/config/default.yml
@@ -1,4 +1,4 @@
-device: cpu
+device: mps
 log: True
 evaluation:
 input_sequence: 512
@@ -7,11 +7,11 @@ model:
   tag: LSTM/4-to-1
   name: LstmModel
   train:
-    epochs: 5
+    epochs: 1
     save_every: 1
 dataset: 
   name: train_0
   loader:
     batch_size: 128
     shuffle: True
-    num_workers: 2
+    num_workers: 6
