--- a/config/lstm.yml
+++ b/config/lstm.yml
@@ -1,19 +1,15 @@
 dataset:
   d_type: train_0
   sequence_length: 11025
-  ae_mode: True
 dataloader:
   batch_size: 1024
   shuffle: True
-model_name: ConvAE
+model_name: LSTM
 model_path: None
 model:
-  sequence_length: 11025
-  features: 2
-  extracted_features: 8
-  latent_size: 32
-  kernel_size: 65
-  stride: 16
+  features: 32
+  lstm_layers: 4
+  hidden_dim: 64
 precision: float32
 train_epochs: 10
 device: cuda
